# ooze-fair-block-builder

./: .gitignore  Cargo.toml  README.md  forensics_output.txt  raw_trades.json  rust-toolchain.toml  test_response.json  token_overview.json  top_traders.json
src/: jito_ordering.rs  lib.rs  live_data.rs  main.rs  ooze_ordering.rs  scenarios.rs  token_forensics.rs  types.rs
src/web/: app.js  style.css
web/: analyze.html  app.js  index.html  style.css
