[package]
name = "ooze-fair-block-builder"
version = "0.1.0"
edition = "2021"
description = "Fair block builder prototype — an alternative to Jito's auction-based transaction ordering"
license = "MIT"
repository = "https://github.com/SwagasaurusFLEX/ooze-fair-block-builder"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tabled = "0.16"
colored = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
criterion = "0.5"

